COMPILADORES - MODULARIZADO/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    LLAVEDER_COMENTARIO
    LLAVEIZQ_COMENTARIO

Grammar

Rule 0     S' -> programa
Rule 1     programa -> INICIO PARENIZQ PARENDER LLAVEIZQ sentencias LLAVEDER
Rule 2     empty -> <empty>
Rule 3     comentario -> COMENTARIO_LINEA
Rule 4     comentario -> COMENTARIO_BLOQUE
Rule 5     sentencias -> sentencia
Rule 6     sentencias -> sentencia sentencias
Rule 7     sentencias -> comentario
Rule 8     sentencias -> comentario sentencias
Rule 9     sentencias -> empty
Rule 10    sentencia -> NUMERO IDENTIFICADOR IGUAL expresion PUNTOYCOMA
Rule 11    sentencia -> DECIMAL IDENTIFICADOR IGUAL expresion PUNTOYCOMA
Rule 12    sentencia -> BOOLEANO IDENTIFICADOR IGUAL booleano PUNTOYCOMA
Rule 13    sentencia -> CADENA IDENTIFICADOR IGUAL expresion PUNTOYCOMA
Rule 14    sentencia -> IDENTIFICADOR IGUAL expresion PUNTOYCOMA
Rule 15    sentencia -> SI PARENIZQ condicion PARENDER LLAVEIZQ sentencias LLAVEDER
Rule 16    sentencia -> SI PARENIZQ condicion PARENDER LLAVEIZQ sentencias LLAVEDER SINO LLAVEIZQ sentencias LLAVEDER
Rule 17    sentencia -> MIENTRAS PARENIZQ condicion PARENDER LLAVEIZQ sentencias LLAVEDER
Rule 18    sentencia -> REGRESA expresion PUNTOYCOMA
Rule 19    sentencia -> REPETIR LLAVEIZQ sentencias LLAVEDER MIENTRAS PARENIZQ condicion PARENDER PUNTOYCOMA
Rule 20    expresion -> expresion SUMA expresion
Rule 21    expresion -> expresion RESTA expresion
Rule 22    expresion -> expresion MULT expresion
Rule 23    expresion -> expresion DIV expresion
Rule 24    expresion -> PARENIZQ expresion PARENDER
Rule 25    expresion -> NUMERO
Rule 26    expresion -> DECIMAL
Rule 27    expresion -> CADENA
Rule 28    expresion -> IDENTIFICADOR
Rule 29    booleano -> VERDADERO
Rule 30    booleano -> FALSO
Rule 31    condicion -> IDENTIFICADOR MAYOR valor
Rule 32    condicion -> IDENTIFICADOR MENOR valor
Rule 33    condicion -> IDENTIFICADOR MAYOR_IGUAL valor
Rule 34    condicion -> IDENTIFICADOR MENOR_IGUAL valor
Rule 35    condicion -> IDENTIFICADOR IGUAL_IGUAL valor
Rule 36    condicion -> IDENTIFICADOR DIFERENTE valor
Rule 37    condicion -> valor MAYOR IDENTIFICADOR
Rule 38    condicion -> valor MENOR IDENTIFICADOR
Rule 39    condicion -> valor MAYOR_IGUAL IDENTIFICADOR
Rule 40    condicion -> valor MENOR_IGUAL IDENTIFICADOR
Rule 41    condicion -> valor IGUAL_IGUAL IDENTIFICADOR
Rule 42    condicion -> valor DIFERENTE IDENTIFICADOR
Rule 43    expresion -> expresion AND expresion
Rule 44    expresion -> expresion OR expresion
Rule 45    expresion -> NEGACION expresion
Rule 46    valor -> NUMERO
Rule 47    valor -> DECIMAL
Rule 48    valor -> CADENA
Rule 49    valor -> IDENTIFICADOR
Rule 50    sentencia -> IDENTIFICADOR PARENIZQ PARENDER LLAVEIZQ sentencias LLAVEDER
Rule 51    sentencia_funcion_declaracion -> FUNCION IDENTIFICADOR PARENIZQ parametros PARENDER LLAVEIZQ sentencias LLAVEDER
Rule 52    sentencia -> IDENTIFICADOR PARENIZQ argumentos PARENDER PUNTOYCOMA
Rule 53    parametros -> parametro
Rule 54    parametros -> parametro COMA parametros
Rule 55    parametros -> empty
Rule 56    parametro -> NUMERO IDENTIFICADOR
Rule 57    parametro -> DECIMAL IDENTIFICADOR
Rule 58    parametro -> BOOLEANO IDENTIFICADOR
Rule 59    parametro -> CADENA IDENTIFICADOR
Rule 60    argumentos -> expresion
Rule 61    argumentos -> expresion COMA argumentos
Rule 62    argumentos -> empty

Terminals, with rules where they appear

AND                  : 43
BOOLEANO             : 12 58
CADENA               : 13 27 48 59
COMA                 : 54 61
COMENTARIO_BLOQUE    : 4
COMENTARIO_LINEA     : 3
DECIMAL              : 11 26 47 57
DIFERENTE            : 36 42
DIV                  : 23
FALSO                : 30
FUNCION              : 51
IDENTIFICADOR        : 10 11 12 13 14 28 31 32 33 34 35 36 37 38 39 40 41 42 49 50 51 52 56 57 58 59
IGUAL                : 10 11 12 13 14
IGUAL_IGUAL          : 35 41
INICIO               : 1
LLAVEDER             : 1 15 16 16 17 19 50 51
LLAVEDER_COMENTARIO  : 
LLAVEIZQ             : 1 15 16 16 17 19 50 51
LLAVEIZQ_COMENTARIO  : 
MAYOR                : 31 37
MAYOR_IGUAL          : 33 39
MENOR                : 32 38
MENOR_IGUAL          : 34 40
MIENTRAS             : 17 19
MULT                 : 22
NEGACION             : 45
NUMERO               : 10 25 46 56
OR                   : 44
PARENDER             : 1 15 16 17 19 24 50 51 52
PARENIZQ             : 1 15 16 17 19 24 50 51 52
PUNTOYCOMA           : 10 11 12 13 14 18 19 52
REGRESA              : 18
REPETIR              : 19
RESTA                : 21
SI                   : 15 16
SINO                 : 16
SUMA                 : 20
VERDADERO            : 29
error                : 

Nonterminals, with rules where they appear

argumentos           : 52 61
booleano             : 12
comentario           : 7 8
condicion            : 15 16 17 19
empty                : 9 55 62
expresion            : 10 11 13 14 18 20 20 21 21 22 22 23 23 24 43 43 44 44 45 60 61
parametro            : 53 54
parametros           : 51 54
programa             : 0
sentencia            : 5 6
sentencia_funcion_declaracion : 
sentencias           : 1 6 8 15 16 16 17 19 50 51
valor                : 31 32 33 34 35 36 37 38 39 40 41 42

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . INICIO PARENIZQ PARENDER LLAVEIZQ sentencias LLAVEDER

    INICIO          shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> INICIO . PARENIZQ PARENDER LLAVEIZQ sentencias LLAVEDER

    PARENIZQ        shift and go to state 3


state 3

    (1) programa -> INICIO PARENIZQ . PARENDER LLAVEIZQ sentencias LLAVEDER

    PARENDER        shift and go to state 4


state 4

    (1) programa -> INICIO PARENIZQ PARENDER . LLAVEIZQ sentencias LLAVEDER

    LLAVEIZQ        shift and go to state 5


state 5

    (1) programa -> INICIO PARENIZQ PARENDER LLAVEIZQ . sentencias LLAVEDER
    (5) sentencias -> . sentencia
    (6) sentencias -> . sentencia sentencias
    (7) sentencias -> . comentario
    (8) sentencias -> . comentario sentencias
    (9) sentencias -> . empty
    (10) sentencia -> . NUMERO IDENTIFICADOR IGUAL expresion PUNTOYCOMA
    (11) sentencia -> . DECIMAL IDENTIFICADOR IGUAL expresion PUNTOYCOMA
    (12) sentencia -> . BOOLEANO IDENTIFICADOR IGUAL booleano PUNTOYCOMA
    (13) sentencia -> . CADENA IDENTIFICADOR IGUAL expresion PUNTOYCOMA
    (14) sentencia -> . IDENTIFICADOR IGUAL expresion PUNTOYCOMA
    (15) sentencia -> . SI PARENIZQ condicion PARENDER LLAVEIZQ sentencias LLAVEDER
    (16) sentencia -> . SI PARENIZQ condicion PARENDER LLAVEIZQ sentencias LLAVEDER SINO LLAVEIZQ sentencias LLAVEDER
    (17) sentencia -> . MIENTRAS PARENIZQ condicion PARENDER LLAVEIZQ sentencias LLAVEDER
    (18) sentencia -> . REGRESA expresion PUNTOYCOMA
    (19) sentencia -> . REPETIR LLAVEIZQ sentencias LLAVEDER MIENTRAS PARENIZQ condicion PARENDER PUNTOYCOMA
    (50) sentencia -> . IDENTIFICADOR PARENIZQ PARENDER LLAVEIZQ sentencias LLAVEDER
    (52) sentencia -> . IDENTIFICADOR PARENIZQ argumentos PARENDER PUNTOYCOMA
    (3) comentario -> . COMENTARIO_LINEA
    (4) comentario -> . COMENTARIO_BLOQUE
    (2) empty -> .

    NUMERO          shift and go to state 10
    DECIMAL         shift and go to state 12
    BOOLEANO        shift and go to state 13
    CADENA          shift and go to state 14
    IDENTIFICADOR   shift and go to state 11
    SI              shift and go to state 15
    MIENTRAS        shift and go to state 16
    REGRESA         shift and go to state 17
    REPETIR         shift and go to state 18
    COMENTARIO_LINEA shift and go to state 19
    COMENTARIO_BLOQUE shift and go to state 20
    LLAVEDER        reduce using rule 2 (empty -> .)

    sentencias                     shift and go to state 6
    sentencia                      shift and go to state 7
    comentario                     shift and go to state 8
    empty                          shift and go to state 9

state 6

    (1) programa -> INICIO PARENIZQ PARENDER LLAVEIZQ sentencias . LLAVEDER

    LLAVEDER        shift and go to state 21


state 7

    (5) sentencias -> sentencia .
    (6) sentencias -> sentencia . sentencias
    (5) sentencias -> . sentencia
    (6) sentencias -> . sentencia sentencias
    (7) sentencias -> . comentario
    (8) sentencias -> . comentario sentencias
    (9) sentencias -> . empty
    (10) sentencia -> . NUMERO IDENTIFICADOR IGUAL expresion PUNTOYCOMA
    (11) sentencia -> . DECIMAL IDENTIFICADOR IGUAL expresion PUNTOYCOMA
    (12) sentencia -> . BOOLEANO IDENTIFICADOR IGUAL booleano PUNTOYCOMA
    (13) sentencia -> . CADENA IDENTIFICADOR IGUAL expresion PUNTOYCOMA
    (14) sentencia -> . IDENTIFICADOR IGUAL expresion PUNTOYCOMA
    (15) sentencia -> . SI PARENIZQ condicion PARENDER LLAVEIZQ sentencias LLAVEDER
    (16) sentencia -> . SI PARENIZQ condicion PARENDER LLAVEIZQ sentencias LLAVEDER SINO LLAVEIZQ sentencias LLAVEDER
    (17) sentencia -> . MIENTRAS PARENIZQ condicion PARENDER LLAVEIZQ sentencias LLAVEDER
    (18) sentencia -> . REGRESA expresion PUNTOYCOMA
    (19) sentencia -> . REPETIR LLAVEIZQ sentencias LLAVEDER MIENTRAS PARENIZQ condicion PARENDER PUNTOYCOMA
    (50) sentencia -> . IDENTIFICADOR PARENIZQ PARENDER LLAVEIZQ sentencias LLAVEDER
    (52) sentencia -> . IDENTIFICADOR PARENIZQ argumentos PARENDER PUNTOYCOMA
    (3) comentario -> . COMENTARIO_LINEA
    (4) comentario -> . COMENTARIO_BLOQUE
    (2) empty -> .

  ! reduce/reduce conflict for LLAVEDER resolved using rule 2 (empty -> .)
    NUMERO          shift and go to state 10
    DECIMAL         shift and go to state 12
    BOOLEANO        shift and go to state 13
    CADENA          shift and go to state 14
    IDENTIFICADOR   shift and go to state 11
    SI              shift and go to state 15
    MIENTRAS        shift and go to state 16
    REGRESA         shift and go to state 17
    REPETIR         shift and go to state 18
    COMENTARIO_LINEA shift and go to state 19
    COMENTARIO_BLOQUE shift and go to state 20
    LLAVEDER        reduce using rule 2 (empty -> .)

  ! LLAVEDER        [ reduce using rule 5 (sentencias -> sentencia .) ]

    sentencia                      shift and go to state 7
    sentencias                     shift and go to state 22
    comentario                     shift and go to state 8
    empty                          shift and go to state 9

state 8

    (7) sentencias -> comentario .
    (8) sentencias -> comentario . sentencias
    (5) sentencias -> . sentencia
    (6) sentencias -> . sentencia sentencias
    (7) sentencias -> . comentario
    (8) sentencias -> . comentario sentencias
    (9) sentencias -> . empty
    (10) sentencia -> . NUMERO IDENTIFICADOR IGUAL expresion PUNTOYCOMA
    (11) sentencia -> . DECIMAL IDENTIFICADOR IGUAL expresion PUNTOYCOMA
    (12) sentencia -> . BOOLEANO IDENTIFICADOR IGUAL booleano PUNTOYCOMA
    (13) sentencia -> . CADENA IDENTIFICADOR IGUAL expresion PUNTOYCOMA
    (14) sentencia -> . IDENTIFICADOR IGUAL expresion PUNTOYCOMA
    (15) sentencia -> . SI PARENIZQ condicion PARENDER LLAVEIZQ sentencias LLAVEDER
    (16) sentencia -> . SI PARENIZQ condicion PARENDER LLAVEIZQ sentencias LLAVEDER SINO LLAVEIZQ sentencias LLAVEDER
    (17) sentencia -> . MIENTRAS PARENIZQ condicion PARENDER LLAVEIZQ sentencias LLAVEDER
    (18) sentencia -> . REGRESA expresion PUNTOYCOMA
    (19) sentencia -> . REPETIR LLAVEIZQ sentencias LLAVEDER MIENTRAS PARENIZQ condicion PARENDER PUNTOYCOMA
    (50) sentencia -> . IDENTIFICADOR PARENIZQ PARENDER LLAVEIZQ sentencias LLAVEDER
    (52) sentencia -> . IDENTIFICADOR PARENIZQ argumentos PARENDER PUNTOYCOMA
    (3) comentario -> . COMENTARIO_LINEA
    (4) comentario -> . COMENTARIO_BLOQUE
    (2) empty -> .

  ! reduce/reduce conflict for LLAVEDER resolved using rule 2 (empty -> .)
    NUMERO          shift and go to state 10
    DECIMAL         shift and go to state 12
    BOOLEANO        shift and go to state 13
    CADENA          shift and go to state 14
    IDENTIFICADOR   shift and go to state 11
    SI              shift and go to state 15
    MIENTRAS        shift and go to state 16
    REGRESA         shift and go to state 17
    REPETIR         shift and go to state 18
    COMENTARIO_LINEA shift and go to state 19
    COMENTARIO_BLOQUE shift and go to state 20
    LLAVEDER        reduce using rule 2 (empty -> .)

  ! LLAVEDER        [ reduce using rule 7 (sentencias -> comentario .) ]

    comentario                     shift and go to state 8
    sentencias                     shift and go to state 23
    sentencia                      shift and go to state 7
    empty                          shift and go to state 9

state 9

    (9) sentencias -> empty .

    LLAVEDER        reduce using rule 9 (sentencias -> empty .)


state 10

    (10) sentencia -> NUMERO . IDENTIFICADOR IGUAL expresion PUNTOYCOMA

    IDENTIFICADOR   shift and go to state 24


state 11

    (14) sentencia -> IDENTIFICADOR . IGUAL expresion PUNTOYCOMA
    (50) sentencia -> IDENTIFICADOR . PARENIZQ PARENDER LLAVEIZQ sentencias LLAVEDER
    (52) sentencia -> IDENTIFICADOR . PARENIZQ argumentos PARENDER PUNTOYCOMA

    IGUAL           shift and go to state 25
    PARENIZQ        shift and go to state 26


state 12

    (11) sentencia -> DECIMAL . IDENTIFICADOR IGUAL expresion PUNTOYCOMA

    IDENTIFICADOR   shift and go to state 27


state 13

    (12) sentencia -> BOOLEANO . IDENTIFICADOR IGUAL booleano PUNTOYCOMA

    IDENTIFICADOR   shift and go to state 28


state 14

    (13) sentencia -> CADENA . IDENTIFICADOR IGUAL expresion PUNTOYCOMA

    IDENTIFICADOR   shift and go to state 29


state 15

    (15) sentencia -> SI . PARENIZQ condicion PARENDER LLAVEIZQ sentencias LLAVEDER
    (16) sentencia -> SI . PARENIZQ condicion PARENDER LLAVEIZQ sentencias LLAVEDER SINO LLAVEIZQ sentencias LLAVEDER

    PARENIZQ        shift and go to state 30


state 16

    (17) sentencia -> MIENTRAS . PARENIZQ condicion PARENDER LLAVEIZQ sentencias LLAVEDER

    PARENIZQ        shift and go to state 31


state 17

    (18) sentencia -> REGRESA . expresion PUNTOYCOMA
    (20) expresion -> . expresion SUMA expresion
    (21) expresion -> . expresion RESTA expresion
    (22) expresion -> . expresion MULT expresion
    (23) expresion -> . expresion DIV expresion
    (24) expresion -> . PARENIZQ expresion PARENDER
    (25) expresion -> . NUMERO
    (26) expresion -> . DECIMAL
    (27) expresion -> . CADENA
    (28) expresion -> . IDENTIFICADOR
    (43) expresion -> . expresion AND expresion
    (44) expresion -> . expresion OR expresion
    (45) expresion -> . NEGACION expresion

    PARENIZQ        shift and go to state 33
    NUMERO          shift and go to state 34
    DECIMAL         shift and go to state 35
    CADENA          shift and go to state 36
    IDENTIFICADOR   shift and go to state 37
    NEGACION        shift and go to state 38

    expresion                      shift and go to state 32

state 18

    (19) sentencia -> REPETIR . LLAVEIZQ sentencias LLAVEDER MIENTRAS PARENIZQ condicion PARENDER PUNTOYCOMA

    LLAVEIZQ        shift and go to state 39


state 19

    (3) comentario -> COMENTARIO_LINEA .

    NUMERO          reduce using rule 3 (comentario -> COMENTARIO_LINEA .)
    DECIMAL         reduce using rule 3 (comentario -> COMENTARIO_LINEA .)
    BOOLEANO        reduce using rule 3 (comentario -> COMENTARIO_LINEA .)
    CADENA          reduce using rule 3 (comentario -> COMENTARIO_LINEA .)
    IDENTIFICADOR   reduce using rule 3 (comentario -> COMENTARIO_LINEA .)
    SI              reduce using rule 3 (comentario -> COMENTARIO_LINEA .)
    MIENTRAS        reduce using rule 3 (comentario -> COMENTARIO_LINEA .)
    REGRESA         reduce using rule 3 (comentario -> COMENTARIO_LINEA .)
    REPETIR         reduce using rule 3 (comentario -> COMENTARIO_LINEA .)
    COMENTARIO_LINEA reduce using rule 3 (comentario -> COMENTARIO_LINEA .)
    COMENTARIO_BLOQUE reduce using rule 3 (comentario -> COMENTARIO_LINEA .)
    LLAVEDER        reduce using rule 3 (comentario -> COMENTARIO_LINEA .)


state 20

    (4) comentario -> COMENTARIO_BLOQUE .

    NUMERO          reduce using rule 4 (comentario -> COMENTARIO_BLOQUE .)
    DECIMAL         reduce using rule 4 (comentario -> COMENTARIO_BLOQUE .)
    BOOLEANO        reduce using rule 4 (comentario -> COMENTARIO_BLOQUE .)
    CADENA          reduce using rule 4 (comentario -> COMENTARIO_BLOQUE .)
    IDENTIFICADOR   reduce using rule 4 (comentario -> COMENTARIO_BLOQUE .)
    SI              reduce using rule 4 (comentario -> COMENTARIO_BLOQUE .)
    MIENTRAS        reduce using rule 4 (comentario -> COMENTARIO_BLOQUE .)
    REGRESA         reduce using rule 4 (comentario -> COMENTARIO_BLOQUE .)
    REPETIR         reduce using rule 4 (comentario -> COMENTARIO_BLOQUE .)
    COMENTARIO_LINEA reduce using rule 4 (comentario -> COMENTARIO_BLOQUE .)
    COMENTARIO_BLOQUE reduce using rule 4 (comentario -> COMENTARIO_BLOQUE .)
    LLAVEDER        reduce using rule 4 (comentario -> COMENTARIO_BLOQUE .)


state 21

    (1) programa -> INICIO PARENIZQ PARENDER LLAVEIZQ sentencias LLAVEDER .

    $end            reduce using rule 1 (programa -> INICIO PARENIZQ PARENDER LLAVEIZQ sentencias LLAVEDER .)


state 22

    (6) sentencias -> sentencia sentencias .

    LLAVEDER        reduce using rule 6 (sentencias -> sentencia sentencias .)


state 23

    (8) sentencias -> comentario sentencias .

    LLAVEDER        reduce using rule 8 (sentencias -> comentario sentencias .)


state 24

    (10) sentencia -> NUMERO IDENTIFICADOR . IGUAL expresion PUNTOYCOMA

    IGUAL           shift and go to state 40


state 25

    (14) sentencia -> IDENTIFICADOR IGUAL . expresion PUNTOYCOMA
    (20) expresion -> . expresion SUMA expresion
    (21) expresion -> . expresion RESTA expresion
    (22) expresion -> . expresion MULT expresion
    (23) expresion -> . expresion DIV expresion
    (24) expresion -> . PARENIZQ expresion PARENDER
    (25) expresion -> . NUMERO
    (26) expresion -> . DECIMAL
    (27) expresion -> . CADENA
    (28) expresion -> . IDENTIFICADOR
    (43) expresion -> . expresion AND expresion
    (44) expresion -> . expresion OR expresion
    (45) expresion -> . NEGACION expresion

    PARENIZQ        shift and go to state 33
    NUMERO          shift and go to state 34
    DECIMAL         shift and go to state 35
    CADENA          shift and go to state 36
    IDENTIFICADOR   shift and go to state 37
    NEGACION        shift and go to state 38

    expresion                      shift and go to state 41

state 26

    (50) sentencia -> IDENTIFICADOR PARENIZQ . PARENDER LLAVEIZQ sentencias LLAVEDER
    (52) sentencia -> IDENTIFICADOR PARENIZQ . argumentos PARENDER PUNTOYCOMA
    (60) argumentos -> . expresion
    (61) argumentos -> . expresion COMA argumentos
    (62) argumentos -> . empty
    (20) expresion -> . expresion SUMA expresion
    (21) expresion -> . expresion RESTA expresion
    (22) expresion -> . expresion MULT expresion
    (23) expresion -> . expresion DIV expresion
    (24) expresion -> . PARENIZQ expresion PARENDER
    (25) expresion -> . NUMERO
    (26) expresion -> . DECIMAL
    (27) expresion -> . CADENA
    (28) expresion -> . IDENTIFICADOR
    (43) expresion -> . expresion AND expresion
    (44) expresion -> . expresion OR expresion
    (45) expresion -> . NEGACION expresion
    (2) empty -> .

  ! shift/reduce conflict for PARENDER resolved as shift
    PARENDER        shift and go to state 42
    PARENIZQ        shift and go to state 33
    NUMERO          shift and go to state 34
    DECIMAL         shift and go to state 35
    CADENA          shift and go to state 36
    IDENTIFICADOR   shift and go to state 37
    NEGACION        shift and go to state 38

  ! PARENDER        [ reduce using rule 2 (empty -> .) ]

    argumentos                     shift and go to state 43
    expresion                      shift and go to state 44
    empty                          shift and go to state 45

state 27

    (11) sentencia -> DECIMAL IDENTIFICADOR . IGUAL expresion PUNTOYCOMA

    IGUAL           shift and go to state 46


state 28

    (12) sentencia -> BOOLEANO IDENTIFICADOR . IGUAL booleano PUNTOYCOMA

    IGUAL           shift and go to state 47


state 29

    (13) sentencia -> CADENA IDENTIFICADOR . IGUAL expresion PUNTOYCOMA

    IGUAL           shift and go to state 48


state 30

    (15) sentencia -> SI PARENIZQ . condicion PARENDER LLAVEIZQ sentencias LLAVEDER
    (16) sentencia -> SI PARENIZQ . condicion PARENDER LLAVEIZQ sentencias LLAVEDER SINO LLAVEIZQ sentencias LLAVEDER
    (31) condicion -> . IDENTIFICADOR MAYOR valor
    (32) condicion -> . IDENTIFICADOR MENOR valor
    (33) condicion -> . IDENTIFICADOR MAYOR_IGUAL valor
    (34) condicion -> . IDENTIFICADOR MENOR_IGUAL valor
    (35) condicion -> . IDENTIFICADOR IGUAL_IGUAL valor
    (36) condicion -> . IDENTIFICADOR DIFERENTE valor
    (37) condicion -> . valor MAYOR IDENTIFICADOR
    (38) condicion -> . valor MENOR IDENTIFICADOR
    (39) condicion -> . valor MAYOR_IGUAL IDENTIFICADOR
    (40) condicion -> . valor MENOR_IGUAL IDENTIFICADOR
    (41) condicion -> . valor IGUAL_IGUAL IDENTIFICADOR
    (42) condicion -> . valor DIFERENTE IDENTIFICADOR
    (46) valor -> . NUMERO
    (47) valor -> . DECIMAL
    (48) valor -> . CADENA
    (49) valor -> . IDENTIFICADOR

    IDENTIFICADOR   shift and go to state 50
    NUMERO          shift and go to state 52
    DECIMAL         shift and go to state 53
    CADENA          shift and go to state 54

    condicion                      shift and go to state 49
    valor                          shift and go to state 51

state 31

    (17) sentencia -> MIENTRAS PARENIZQ . condicion PARENDER LLAVEIZQ sentencias LLAVEDER
    (31) condicion -> . IDENTIFICADOR MAYOR valor
    (32) condicion -> . IDENTIFICADOR MENOR valor
    (33) condicion -> . IDENTIFICADOR MAYOR_IGUAL valor
    (34) condicion -> . IDENTIFICADOR MENOR_IGUAL valor
    (35) condicion -> . IDENTIFICADOR IGUAL_IGUAL valor
    (36) condicion -> . IDENTIFICADOR DIFERENTE valor
    (37) condicion -> . valor MAYOR IDENTIFICADOR
    (38) condicion -> . valor MENOR IDENTIFICADOR
    (39) condicion -> . valor MAYOR_IGUAL IDENTIFICADOR
    (40) condicion -> . valor MENOR_IGUAL IDENTIFICADOR
    (41) condicion -> . valor IGUAL_IGUAL IDENTIFICADOR
    (42) condicion -> . valor DIFERENTE IDENTIFICADOR
    (46) valor -> . NUMERO
    (47) valor -> . DECIMAL
    (48) valor -> . CADENA
    (49) valor -> . IDENTIFICADOR

    IDENTIFICADOR   shift and go to state 50
    NUMERO          shift and go to state 52
    DECIMAL         shift and go to state 53
    CADENA          shift and go to state 54

    condicion                      shift and go to state 55
    valor                          shift and go to state 51

state 32

    (18) sentencia -> REGRESA expresion . PUNTOYCOMA
    (20) expresion -> expresion . SUMA expresion
    (21) expresion -> expresion . RESTA expresion
    (22) expresion -> expresion . MULT expresion
    (23) expresion -> expresion . DIV expresion
    (43) expresion -> expresion . AND expresion
    (44) expresion -> expresion . OR expresion

    PUNTOYCOMA      shift and go to state 56
    SUMA            shift and go to state 57
    RESTA           shift and go to state 58
    MULT            shift and go to state 59
    DIV             shift and go to state 60
    AND             shift and go to state 61
    OR              shift and go to state 62


state 33

    (24) expresion -> PARENIZQ . expresion PARENDER
    (20) expresion -> . expresion SUMA expresion
    (21) expresion -> . expresion RESTA expresion
    (22) expresion -> . expresion MULT expresion
    (23) expresion -> . expresion DIV expresion
    (24) expresion -> . PARENIZQ expresion PARENDER
    (25) expresion -> . NUMERO
    (26) expresion -> . DECIMAL
    (27) expresion -> . CADENA
    (28) expresion -> . IDENTIFICADOR
    (43) expresion -> . expresion AND expresion
    (44) expresion -> . expresion OR expresion
    (45) expresion -> . NEGACION expresion

    PARENIZQ        shift and go to state 33
    NUMERO          shift and go to state 34
    DECIMAL         shift and go to state 35
    CADENA          shift and go to state 36
    IDENTIFICADOR   shift and go to state 37
    NEGACION        shift and go to state 38

    expresion                      shift and go to state 63

state 34

    (25) expresion -> NUMERO .

    PUNTOYCOMA      reduce using rule 25 (expresion -> NUMERO .)
    SUMA            reduce using rule 25 (expresion -> NUMERO .)
    RESTA           reduce using rule 25 (expresion -> NUMERO .)
    MULT            reduce using rule 25 (expresion -> NUMERO .)
    DIV             reduce using rule 25 (expresion -> NUMERO .)
    AND             reduce using rule 25 (expresion -> NUMERO .)
    OR              reduce using rule 25 (expresion -> NUMERO .)
    COMA            reduce using rule 25 (expresion -> NUMERO .)
    PARENDER        reduce using rule 25 (expresion -> NUMERO .)


state 35

    (26) expresion -> DECIMAL .

    PUNTOYCOMA      reduce using rule 26 (expresion -> DECIMAL .)
    SUMA            reduce using rule 26 (expresion -> DECIMAL .)
    RESTA           reduce using rule 26 (expresion -> DECIMAL .)
    MULT            reduce using rule 26 (expresion -> DECIMAL .)
    DIV             reduce using rule 26 (expresion -> DECIMAL .)
    AND             reduce using rule 26 (expresion -> DECIMAL .)
    OR              reduce using rule 26 (expresion -> DECIMAL .)
    COMA            reduce using rule 26 (expresion -> DECIMAL .)
    PARENDER        reduce using rule 26 (expresion -> DECIMAL .)


state 36

    (27) expresion -> CADENA .

    PUNTOYCOMA      reduce using rule 27 (expresion -> CADENA .)
    SUMA            reduce using rule 27 (expresion -> CADENA .)
    RESTA           reduce using rule 27 (expresion -> CADENA .)
    MULT            reduce using rule 27 (expresion -> CADENA .)
    DIV             reduce using rule 27 (expresion -> CADENA .)
    AND             reduce using rule 27 (expresion -> CADENA .)
    OR              reduce using rule 27 (expresion -> CADENA .)
    COMA            reduce using rule 27 (expresion -> CADENA .)
    PARENDER        reduce using rule 27 (expresion -> CADENA .)


state 37

    (28) expresion -> IDENTIFICADOR .

    PUNTOYCOMA      reduce using rule 28 (expresion -> IDENTIFICADOR .)
    SUMA            reduce using rule 28 (expresion -> IDENTIFICADOR .)
    RESTA           reduce using rule 28 (expresion -> IDENTIFICADOR .)
    MULT            reduce using rule 28 (expresion -> IDENTIFICADOR .)
    DIV             reduce using rule 28 (expresion -> IDENTIFICADOR .)
    AND             reduce using rule 28 (expresion -> IDENTIFICADOR .)
    OR              reduce using rule 28 (expresion -> IDENTIFICADOR .)
    COMA            reduce using rule 28 (expresion -> IDENTIFICADOR .)
    PARENDER        reduce using rule 28 (expresion -> IDENTIFICADOR .)


state 38

    (45) expresion -> NEGACION . expresion
    (20) expresion -> . expresion SUMA expresion
    (21) expresion -> . expresion RESTA expresion
    (22) expresion -> . expresion MULT expresion
    (23) expresion -> . expresion DIV expresion
    (24) expresion -> . PARENIZQ expresion PARENDER
    (25) expresion -> . NUMERO
    (26) expresion -> . DECIMAL
    (27) expresion -> . CADENA
    (28) expresion -> . IDENTIFICADOR
    (43) expresion -> . expresion AND expresion
    (44) expresion -> . expresion OR expresion
    (45) expresion -> . NEGACION expresion

    PARENIZQ        shift and go to state 33
    NUMERO          shift and go to state 34
    DECIMAL         shift and go to state 35
    CADENA          shift and go to state 36
    IDENTIFICADOR   shift and go to state 37
    NEGACION        shift and go to state 38

    expresion                      shift and go to state 64

state 39

    (19) sentencia -> REPETIR LLAVEIZQ . sentencias LLAVEDER MIENTRAS PARENIZQ condicion PARENDER PUNTOYCOMA
    (5) sentencias -> . sentencia
    (6) sentencias -> . sentencia sentencias
    (7) sentencias -> . comentario
    (8) sentencias -> . comentario sentencias
    (9) sentencias -> . empty
    (10) sentencia -> . NUMERO IDENTIFICADOR IGUAL expresion PUNTOYCOMA
    (11) sentencia -> . DECIMAL IDENTIFICADOR IGUAL expresion PUNTOYCOMA
    (12) sentencia -> . BOOLEANO IDENTIFICADOR IGUAL booleano PUNTOYCOMA
    (13) sentencia -> . CADENA IDENTIFICADOR IGUAL expresion PUNTOYCOMA
    (14) sentencia -> . IDENTIFICADOR IGUAL expresion PUNTOYCOMA
    (15) sentencia -> . SI PARENIZQ condicion PARENDER LLAVEIZQ sentencias LLAVEDER
    (16) sentencia -> . SI PARENIZQ condicion PARENDER LLAVEIZQ sentencias LLAVEDER SINO LLAVEIZQ sentencias LLAVEDER
    (17) sentencia -> . MIENTRAS PARENIZQ condicion PARENDER LLAVEIZQ sentencias LLAVEDER
    (18) sentencia -> . REGRESA expresion PUNTOYCOMA
    (19) sentencia -> . REPETIR LLAVEIZQ sentencias LLAVEDER MIENTRAS PARENIZQ condicion PARENDER PUNTOYCOMA
    (50) sentencia -> . IDENTIFICADOR PARENIZQ PARENDER LLAVEIZQ sentencias LLAVEDER
    (52) sentencia -> . IDENTIFICADOR PARENIZQ argumentos PARENDER PUNTOYCOMA
    (3) comentario -> . COMENTARIO_LINEA
    (4) comentario -> . COMENTARIO_BLOQUE
    (2) empty -> .

    NUMERO          shift and go to state 10
    DECIMAL         shift and go to state 12
    BOOLEANO        shift and go to state 13
    CADENA          shift and go to state 14
    IDENTIFICADOR   shift and go to state 11
    SI              shift and go to state 15
    MIENTRAS        shift and go to state 16
    REGRESA         shift and go to state 17
    REPETIR         shift and go to state 18
    COMENTARIO_LINEA shift and go to state 19
    COMENTARIO_BLOQUE shift and go to state 20
    LLAVEDER        reduce using rule 2 (empty -> .)
